Shang New Live/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Short_Name__c</fullName>
        <label>Account Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Landlord</fullName>
                </value>
                <value>
                    <fullName>Management Co.</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Tenant</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Turnover__c</fullName>
        <label>Annual Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adidas</fullName>
                </value>
                <value>
                    <fullName>AGD</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Arnold Palmer</fullName>
                </value>
                <value>
                    <fullName>Arrow</fullName>
                </value>
                <value>
                    <fullName>Astons</fullName>
                </value>
                <value>
                    <fullName>AYA</fullName>
                </value>
                <value>
                    <fullName>Banana</fullName>
                </value>
                <value>
                    <fullName>Bata</fullName>
                </value>
                <value>
                    <fullName>Best Style</fullName>
                </value>
                <value>
                    <fullName>Bossini</fullName>
                </value>
                <value>
                    <fullName>BreadTalk</fullName>
                </value>
                <value>
                    <fullName>Candy Land</fullName>
                </value>
                <value>
                    <fullName>CB</fullName>
                </value>
                <value>
                    <fullName>Charles &amp; Keith</fullName>
                </value>
                <value>
                    <fullName>City Mart</fullName>
                </value>
                <value>
                    <fullName>Clinique</fullName>
                </value>
                <value>
                    <fullName>Clio</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>Crazy Color</fullName>
                </value>
                <value>
                    <fullName>Crystal Jade</fullName>
                </value>
                <value>
                    <fullName>Dr. Kong</fullName>
                </value>
                <value>
                    <fullName>Easyriders</fullName>
                </value>
                <value>
                    <fullName>ERKE</fullName>
                </value>
                <value>
                    <fullName>Esprit</fullName>
                </value>
                <value>
                    <fullName>Estee Lauder</fullName>
                </value>
                <value>
                    <fullName>Etienne Aigner</fullName>
                </value>
                <value>
                    <fullName>Etude House</fullName>
                </value>
                <value>
                    <fullName>Fuji</fullName>
                </value>
                <value>
                    <fullName>Furla</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Registration_No__c</fullName>
        <label>Business Registration No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COA_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COA Group</label>
        <referenceTo>COA_Group__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_of_Origin__c</fullName>
        <label>Country of Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <displayFormat>C{000000}</displayFormat>
        <label>Customer Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Finance_Company_Code__c</fullName>
        <description>Accounting System Company Code</description>
        <label>Finance Company Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Cost_Centre__c</fullName>
        <label>Finance Cost Centre</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Profit_Centre__c</fullName>
        <label>Finance Profit Centre</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shop_Name_Print__c</fullName>
        <label>Shop Name (Print)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shop_Name_Printed__c</fullName>
        <label>Shop Name (Printed)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Trade_Category__c</fullName>
        <label>Sub-Trade Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Trade_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Trade_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trade_Category__c</fullName>
        <label>Trade Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Trade_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Witholding_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible Witholding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>domain__c</fullName>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Type__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Customer_Code__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>AllVendors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Type__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Customer_Code__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <filters>
            <field>Account_Type__c</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filters>
        <label>All Vendors</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>TestAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Type__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Customer_Code__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Test</value>
        </filters>
        <label>Test Accounts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>